# flow_shop

./: CMakeLists.txt  Flowshop.cpp  Flowshop.h  Operacja.cpp  Operacja.h  Procesor.cpp  Procesor.h  Rozwiazanie.cpp  Rozwiazanie.h  Zadanie.cpp  Zadanie.h  main.cpp
